Fix to allow compilation of tests in JDK9+
Signed-off-by: Alexander Lowey - Weber <alexander.weber@here.com>